feat(elections): admin can manage election feedback form
fix admin permissions spec

--- a/decidim-elections/config/locales/en.yml
+++ b/decidim-elections/config/locales/en.yml
@@ -60,6 +60,7 @@ en:
         edit: Edit
         edit_answers: Edit answers
         edit_questions: Edit questions
+        feedback: Voter feedback
         import: Import proposals to answers
         new: New %{name}
         preview: Preview
