--- a/decidim-system/config/locales/en.yml
+++ b/decidim-system/config/locales/en.yml
@@ -155,9 +155,9 @@ en:
             api_secret: API secret
         smtp_settings:
           instructions:
-            from_label: 'Email sender will be: "your-organization-name <your-organization@your-provider.org>". Leave blank to use the ''from_email'' as label'
+            from_label: 'Email sender will be: "your-organization-name <your-organization@example.org>". Leave blank to use the ''from_email'' as label'
           placeholder:
-            from_email: your-organization@your-provider.org
+            from_email: your-organization@example.org
             from_label: your-organization-name
         update:
           error: There was a problem updating this organization.
