Add an error message modal for the conversations (#6446)
* Add a configuration option for conversation message max length

* Implement an error modal for the conversation messages

An error modal will now be displayed if there are errors with the
message being sent.

* Add a test case for a too long conversation message

* Fix the conversations controller spec after the error changes

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -896,6 +896,11 @@ en:
           show: Show conversation with %{sender}
         create:
           error: Conversation not started. Try again later
+        error_modal:
+          close: Close modal
+          correct_errors: Please correct the errors and try again.
+          intro: 'There were the following errors with your message:'
+          ok: OK
         index:
           ago: ago
           close: Close modal
@@ -919,7 +924,7 @@ en:
           send: Send
           title: Start a conversation
         update:
-          error: Message not sent. Try again later
+          error: Message was not sent due to an error
     metrics:
       download:
         csv: Download data (csv)
