Change popup button from "Keep uncheck" to "Keep unchecked" (#6488)
The button appears in a popup when a user does _not_ check the "Receive an
occasional newsletter" checkbox while signinup up.  "Keep unchecked" is
a more correct translation.

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -443,7 +443,7 @@ en:
           buttons:
             check: Check and continue
             close_modal: Close modal
-            uncheck: Keep uncheck
+            uncheck: Keep unchecked
           notice: |-
             <p>Hey, are you sure you don't want to receive a newsletter?<br>
             Please consider again ticking the newsletter checkbox below.<br>
