Configure Decidim Bulletin Board (#6420)
* doc: add Bulletin Board connection setup guide

* feat: add identification keys generation task

* feat: include bulletin board settings in the applications generator

* feat: make the bulletin board client read the connection settings

* feat: warn administrator users about the missing Bulletin Board setup

* refactor: move rake tasks test helpers from core to dev to reuse them

* test: add tests for the rake task and the bulletin board client

* style: fix lint issues

* doc: apply requested changes

* feat: fix style for links inside admin callouts

--- a/decidim-elections/config/locales/en.yml
+++ b/decidim-elections/config/locales/en.yml
@@ -93,6 +93,7 @@ en:
             title: Edit election
             update: Update election
           index:
+            no_bulletin_board: There is no <a href="https://github.com/decidim/decidim-bulletin-board">Bulletin Board server</a> configured, which is needed to use this module. This task should be done by the System Administrator.
             title: Elections
           new:
             create: Create election
