--- a/decidim-forms/config/locales/en.yml
+++ b/decidim-forms/config/locales/en.yml
@@ -104,7 +104,7 @@ en:
             up: Up
           update:
             invalid: There was a problem saving the form.
-            success: Forms successfully saved.
+            success: Form successfully saved.
       errors:
         answer:
           body: Body can't be blank
