chore(elections): enable/disable TrusteesParticipatorySpace considered attribute

--- a/decidim-elections/config/locales/en.yml
+++ b/decidim-elections/config/locales/en.yml
@@ -139,6 +139,13 @@ en:
           update:
             invalid: There was a problem updating this question
             success: Question successfully updated
+        trustee_participatory_space:
+          actions:
+            enable: Consider
+            disable: disable
+          update:
+            invalid: There was a problem updating %{trustee} trustee
+            success: Trustee %{trustee} successfully updated
         trustees:
           create:
             exists: Trustee exists for this participatory space
@@ -147,9 +154,6 @@ en:
           destroy:
             invalid: There was a problem deleting this trustee
             success: Trustee successfully deleted
-          edit:
-            title: Edit Trustee
-            update: Update Trustee
           form:
             select_user: Select user
           index:
@@ -157,9 +161,6 @@ en:
           new:
             create: Create Trustee
             title: New Trustee
-          update:
-            invalid: There was a problem updating this trustee
-            success: Trustee successfully updated
       admin_log:
         election:
           publish: "%{user_name} published the %{resource_name} election"
