Fix comments section title with only 1 comment

--- a/decidim-comments/config/locales/en.yml
+++ b/decidim-comments/config/locales/en.yml
@@ -80,7 +80,9 @@ en:
         loading: Loading comments ...
         single_comment_warning: You can check the rest of the comments <a href="%{url}">here</a>.
         single_comment_warning_title: You are seeing a single comment
-        title: "%{count} comments"
+        title:
+          one: "%{count} comment"
+          other: "%{count} comments"
       down_vote_button:
         text: I disagree with this comment
       up_vote_button:
