Show drafted initiatives

--- a/decidim-initiatives/config/locales/en.yml
+++ b/decidim-initiatives/config/locales/en.yml
@@ -295,6 +295,7 @@ en:
           all: All
           answered: Answered
           closed: Closed
+          draft: Draft
           open: Open
           rejected: Not enough signatures
         filter_type_values:
