Fix missing translation in Forms

--- a/decidim-forms/config/locales/en.yml
+++ b/decidim-forms/config/locales/en.yml
@@ -4,6 +4,8 @@ en:
     attributes:
       answer:
         body: Answer
+        choices: Choices
+        selected_choices: Selected choices
       question:
         max_choices: Maximum number of choices
         question_type: Type
