--- a/decidim-participatory_processes/config/locales/ca.yml
+++ b/decidim-participatory_processes/config/locales/ca.yml
@@ -148,6 +148,13 @@ ca:
           copy: Còpia
           select: Selecciona quines dades vols duplicar
           title: Duplica procés participatiu
+      participatory_process_group_homepage:
+        edit:
+          active_content_blocks: Blocs de contingut actiu
+          inactive_content_blocks: Blocs de contingut inactiu
+      participatory_process_group_homepage_content_blocks:
+        edit:
+          update: Actualitza
       participatory_process_groups:
         destroy:
           error: Hi ha hagut un error eliminant aquest grup de processos participatius.
