Add config to allow online meetings

--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -82,6 +82,7 @@ en:
         name: Meetings
         settings:
           global:
+            allow_online_meetings: Allow online meetings
             announcement: Announcement
             comments_enabled: Comments enabled
             comments_max_length: Comments max length (Leave 0 for default value)
