--- a/decidim-demographics/config/locales/en.yml
+++ b/decidim-demographics/config/locales/en.yml
@@ -12,6 +12,8 @@ en:
     demographics:
       directory:
         demographics:
+          successfully_saved : "Data successfully saved"
+            
           new:
             demographics: "Demographic Data Collection"
             save: "Save"
@@ -20,36 +22,38 @@ en:
             genders:
               man: "Man"
               woman: "Woman"
-              non_binary: "undefined"
-            gender_help: ""
-            age_prompt: ""
+              non_binary: "Other"
+            gender_help: "Please select your gender"
+            age_help: "Pleae select your age group"
+            nationalities_help: "Please select up to 3 nationalities"
+            age_prompt: "Please select your age"
             nationality_prompt: ""
             nationalities:
-              austrian: ""
-              belgian: ""
-              bulgarian: ""
-              croat: ""
-              cypriote: ""
-              czech: ""
-              dane: ""
-              estonian: ""
-              finn: ""
-              french: ""
-              german: ""
-              greek: ""
-              hungarian: ""
-              irish: ""
-              italian: ""
-              latvian: ""
-              lithuanian: ""
-              luxembourger: ""
-              maltese: ""
-              dutch: ""
-              polish: ""
-              portuguese: ""
-              romanian: ""
-              slovak: ""
-              slovenian: ""
-              spanish: ""
-              swede: ""
-              other: ""
+              austrian: "Austrian"
+              belgian: "Belgian"
+              bulgarian: "Bulgarian"
+              croat: "Croat"
+              cypriote: "Cypriote"
+              czech: "Czech"
+              dane: "Dane"
+              estonian: "Estonian"
+              finn: "Finn"
+              french: "French"
+              german: "German"
+              greek: "Greek"
+              hungarian: "Hungarian"
+              irish: "Irish"
+              italian: "Italian"
+              latvian: "Latvian"
+              lithuanian: "Lithuanian"
+              luxembourger: "Luxemburger"
+              maltese: "Maltese"
+              dutch: "Dutch"
+              polish: "Polish"
+              portuguese: "Portuguese"
+              romanian: "Romanian"
+              slovak: "Slovak"
+              slovenian: "Slovenian"
+              spanish: "Spanish"
+              swede: "Swede"
+              other: "Other"
