--- a/decidim-demographics/config/locales/en.yml
+++ b/decidim-demographics/config/locales/en.yml
@@ -1,59 +1,61 @@
 ---
-
 en:
-  layouts:
-    decidim:
-      user_profile:
-        demographics: "Demographic data"
   decidim:
     components:
       demographics:
         name: Demographics
     demographics:
+      data:
+        update:
+          error: There was an error saving demographic data
+          success: The demographic data successfully saved
       directory:
         demographics:
-          successfully_saved : "Data successfully saved"
-            
-          new:
-            demographics: "Demographic Data Collection"
-            save: "Save"
           form:
-            gender_prompt: "Your gender"
+            age_help: Pleae select your age group
+            age_prompt: Please select your age
+            gender_help: Please select your gender
+            gender_prompt: Your gender
             genders:
-              man: "Man"
-              woman: "Woman"
-              non_binary: "Other"
-            gender_help: "Please select your gender"
-            age_help: "Pleae select your age group"
-            nationalities_help: "Please select up to 3 nationalities"
-            age_prompt: "Please select your age"
-            nationality_prompt: ""
+              man: Man
+              non_binary: Other
+              woman: Woman
             nationalities:
-              austrian: "Austrian"
-              belgian: "Belgian"
-              bulgarian: "Bulgarian"
-              croat: "Croat"
-              cypriote: "Cypriote"
-              czech: "Czech"
-              dane: "Dane"
-              estonian: "Estonian"
-              finn: "Finn"
-              french: "French"
-              german: "German"
-              greek: "Greek"
-              hungarian: "Hungarian"
-              irish: "Irish"
-              italian: "Italian"
-              latvian: "Latvian"
-              lithuanian: "Lithuanian"
-              luxembourger: "Luxemburger"
-              maltese: "Maltese"
-              dutch: "Dutch"
-              polish: "Polish"
-              portuguese: "Portuguese"
-              romanian: "Romanian"
-              slovak: "Slovak"
-              slovenian: "Slovenian"
-              spanish: "Spanish"
-              swede: "Swede"
-              other: "Other"
+              austrian: Austrian
+              belgian: Belgian
+              bulgarian: Bulgarian
+              croat: Croat
+              cypriote: Cypriote
+              czech: Czech
+              dane: Dane
+              dutch: Dutch
+              estonian: Estonian
+              finn: Finn
+              french: French
+              german: German
+              greek: Greek
+              hungarian: Hungarian
+              irish: Irish
+              italian: Italian
+              latvian: Latvian
+              lithuanian: Lithuanian
+              luxembourger: Luxemburger
+              maltese: Maltese
+              other: Other
+              polish: Polish
+              portuguese: Portuguese
+              romanian: Romanian
+              slovak: Slovak
+              slovenian: Slovenian
+              spanish: Spanish
+              swede: Swede
+            nationalities_help: Please select up to 3 nationalities
+            nationality_prompt: ''
+          new:
+            demographics: Demographic Data Collection
+            save: Save
+          successfully_saved: Data successfully saved
+  layouts:
+    decidim:
+      user_profile:
+        demographics: Demographic data
