--- a/decidim-conferences/config/locales/en.yml
+++ b/decidim-conferences/config/locales/en.yml
@@ -548,6 +548,12 @@ en:
       index:
         description: Links about this conference
         title: Media and Links
+    help:
+      participatory_spaces:
+        conferences:
+          contextual: "<p>A <strong>conference</strong> is a collection of meetings arranged in a programme, with a number of people invited as speakers, and other information fields typical of large congresses or social events (registration, list of organisations that support or sponsor the event, etc.).</p> <p>Examples: A conference can be a relevant event for an organization and its members, or take place as part of a participatory process or follow a consultation.</p>\n"
+          page: "<p>A <strong>conference</strong> is a collection of meetings arranged in a programme, with a number of people invited as speakers, and other information fields typical of large congresses or social events (registration, list of organisations that support or sponsor the event, etc.).</p> <p>Examples: A conference can be a relevant event for an organization and its members, or take place as part of a participatory process or follow a consultation.</p>\n"
+          title: What are conferences?
     menu:
       conferences: Conferences
   devise:
