--- a/decidim-participatory_processes/config/locales/es.yml
+++ b/decidim-participatory_processes/config/locales/es.yml
@@ -319,6 +319,13 @@ es:
       show:
         related_assemblies: Asambleas relacionadas
     participatory_process_groups:
+      content_blocks:
+        title:
+          meta_scope: Ámbito
+          name: Título, descripción y hashtag
+          participatory_processes:
+            one: "1 proceso"
+            other: "%{count} procesos"
       show:
         title: Grupos de procesos participativos
     participatory_process_steps:
