--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -1,4 +1,17 @@
 ---
+
+#show_suspend_modals:
+#  close_modal: Close modal
+#  unsuspend:
+#    action: Unblock user
+#    description: Lorem ipsum
+#    title: "Unsuspend User"
+#  suspend:
+#    justification: Justification
+#
+#
+#    title:
+
 en:
   activemodel:
     attributes:
@@ -135,6 +148,12 @@ en:
         site: Website
   decidim:
     admin:
+      user_suspension:
+        new:
+          title: "Suspend User %{name}"
+          justification: Justification
+          action: Block user
+          description: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
       actions:
         add: Add
         browse: Browse
@@ -547,11 +566,19 @@ en:
           error: There was a problem updating this newsletter.
           success: Newsletter updated successfully. Please review it before sending.
       officializations:
+        suspend:
+          success: Participant successfully suspended
+          error: There wes an error suspending the participant
+        unsuspend:
+          success: Participant successfully unsuspended
+          error: There wes an error unsuspending the participant
         create:
           success: Participant successfully officialized
         destroy:
           success: Participant successfully unofficialized
         index:
+          unsuspend: Unsuspend User
+          suspend: Suspend User
           actions: Actions
           badge: Badge
           created_at: Created At
