--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -80,6 +80,7 @@ en:
       logo: "%{organization}'s official logo"
       skip_button: Skip to main content
     account:
+      suspended: This account has been suspended due to Terms and Contitions violation
       data_portability_export:
         file_no_exists: File does not exist
         notice: The download of your data is currently in progress. You'll receive an email when it's complete.
