--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -321,8 +321,12 @@ en:
         search_placeholder:
           name_or_nickname_or_email_cont: Search %{collection} by email, name or nickname.
           title_cont: Search %{collection} by title.
+          reportable_id_string_cont: Search %{collection} by reportable id.
         state_eq:
           label: State
+        moderations:
+          reportable_type_string_eq:
+            label: "Type"
       help_sections:
         error: There was a problem updating the help sections
         form:
