fixing specs and merging branch

--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
         start_time: Start Time
         title: Title
         transparent: Transparent
+        type_of_meeting: Type
       minutes:
         audio_url: Audio url
         description: Description
@@ -395,6 +396,11 @@ en:
             user_groups: Groups
           scope: Scope
           search: Search
+          type: Meeting type
+          type_values:
+            all: All
+            in_person: In-person
+            online: Online
         filters_small_view:
           close_modal: Close modal
           filter: Filter
