--- a/decidim-system/config/locales/en.yml
+++ b/decidim-system/config/locales/en.yml
@@ -1,5 +1,14 @@
 ---
 en:
+  activemodel:
+    attributes:
+      organization:
+        from_email: Email address
+        from_label: Name
+        address: SMTP hostname
+        password: Password
+        port: Port
+        user_name: Username
   decidim:
     system:
       actions:
@@ -82,7 +91,10 @@ en:
             api_key: API key
             api_secret: API secret
         smtp_settings:
+          fieldsets:
+            sender: Sender
           instructions:
+            sender: Sender Name <email@example.org>
             from_label: 'Email sender will be: "your-organization-name <your-organization@your-provider.org>". Leave blank to use the ''from_email'' as label'
           placeholder:
             from_email: your-organization@your-provider.org
