--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -391,7 +391,7 @@ en:
             user_groups: Groups
           scope: Scope
           search: Search
-          type: Meeting type
+          type: Type
           type_values:
             all: All
             in_person: In-person
@@ -405,7 +405,7 @@ en:
           address_help: 'Address: used by Geocoder to find the location'
           create_as: Create meeting as
           location_help: 'Location: message directed to the users implying the spot to meet at'
-          location_hints_help: 'Location hints: additional info. Example: the floor of the building'
+          location_hints_help: 'Location hints: additional info. Example: the floor of the building if it\'s an in-person meeting, or the meeting password if it\'s an online meeting with restricted access.'
           online_meeting_url_help: 'Link: allow participants to connect directly to your meeting'
           select_a_category: Please select a category
           select_a_meeting_type: Please select a meeting type
