--- a/decidim-system/config/locales/en.yml
+++ b/decidim-system/config/locales/en.yml
@@ -164,7 +164,7 @@ en:
           fieldsets:
             sender: Sender
           instructions:
-            sender: Sender Name <email@example.org>
+            sender: Sender Label <email@example.org>
             from_label: 'Email sender will be: "your-organization-name <your-organization@your-provider.org>". Leave blank to use the ''from_email'' as label'
           placeholder:
             from_email: your-organization@example.org
