--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -149,7 +149,9 @@ en:
         officialize: "%{user_name} officialized the participant %{resource_name}"
         remove_from_admin: "%{user_name} removed the participant %{resource_name} with role: %{role}"
         show_email: "%{user_name} retrieved the email of the participant %{resource_name}"
+        suspend: "%{user_name} blocked user %{resource_name}"
         unofficialize: "%{user_name} unofficialized the participant %{resource_name}"
+        unsuspend: "%{user_name} unblocked user %{resource_name}"
       user_group:
         reject: "%{user_name} rejected the %{resource_name} group verification"
         verify: "%{user_name} verified the group %{resource_name}"
