Implement close meeting in public pages

--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -363,6 +363,11 @@ en:
             subject: Your meeting's registration has been confirmed
       meeting:
         not_allowed: You are not allowed to view this meeting
+      meeting_closes:
+        edit:
+          back: Back
+          close: Close meeting
+          title: Close meeting
       meetings:
         count:
           meetings_count:
@@ -426,6 +431,7 @@ en:
         show:
           attendees: Attendees count
           back: Back to list
+          close_meeting: Close meeting
           contributions: Contributions count
           date: Date
           edit_meeting: Edit meeting
