--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -97,7 +97,7 @@ en:
       show:
         change_password: Change password
         update_account: Update account
-      suspended: This account has been suspended due to Terms and Contitions violation
+      suspended: This account has been suspended due to Terms and Conditions violation
       update:
         error: There was a problem updating your account.
         success: Your account was successfully updated.
