--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1205,6 +1205,15 @@ en:
         report: Report
         spam: Contains clickbait, advertising, scams or script bots.
         title: Report inappropriate content
+      flag_user_modal:
+        already_reported: This content is already reported and it will be reviewed by an admin.
+        close: Close
+        description: What is inappropriate about the user?
+        does_not_belong: Contains illegal activity, suicide threats, personal information, or something else you think doesn't belong on %{organization_name}.
+        offensive: Contains racism, sexism, slurs, personal attacks, death threats, suicide requests or any form of hate speech.
+        report: Report
+        spam: Contains clickbait, advertising, scams or script bots.
+        title: Report inappropriate User
       floating_help:
         close: Close help
         help: Help
@@ -1280,6 +1289,13 @@ en:
       update:
         error: There was a problem updating your interests.
         success: Your interests have been successfully updated.
+    user_report_mailer:
+      notify:
+        body_1: "User %{user} has been reported by %{token}"
+        body_2: "Reason: %{reason}"
+        greetings: Greetings,<br/>%{organization_name}<br/><a href="%{organization_url}">%{organization_url}</a>
+        hello: Hello,
+        subject: You have been reported %{organization_name}?
     version:
       show:
         back_to_resource: Go back
